--- a/src/app/autenticacion/login/login.component.html
+++ b/src/app/autenticacion/login/login.component.html
@@ -38,14 +38,7 @@
   </div>
   <div class="row">
       <div class="col-md-9">
-          <button id="id_ingresar" type="submit" class="btn btn-primary pull-right">Acceder</button>
-      </div>
-  </div>
-  <div class="row">
-      <div class="col-md-9 pt-25 clearfix">
-          <div class="pull-right">
-              <a id="recuperar-contraseña" [routerLink]="['/nuevo-password']">Recuperar contraseña</a>
-          </div>
+          <button id="id_ingresar" type="submit" class="btn btn-primary pull-right">Iniciar sesión</button>
       </div>
   </div>
 </form>
