--- a/src/app/compartido/componentes/encabezado/encabezado.component.html
+++ b/src/app/compartido/componentes/encabezado/encabezado.component.html
@@ -15,8 +15,8 @@
 
 <div class="row">
   <div class="col-md-12">
-      <h2>Sistema de Identificación de Ganado</h2>
-      <h3>Iniciar sesión</h3>
-      <hr class="red">
+    <h2>Generación de Código en Ventanilla</h2>
+    <h3>Sistema de Identificación de Ganado</h3><h3>Iniciar sesión</h3>
+    <hr class="red">
   </div>
 </div>
