--- a/src/app/autenticacion/login/login.component.html
+++ b/src/app/autenticacion/login/login.component.html
@@ -1,4 +1,12 @@
 
+<div class="row">
+  <div class="col-md-12">
+    <h2>Generación de Código en Ventanilla</h2>
+    <h3>Sistema de Identificación de Ganado</h3><h3>Iniciar sesión</h3>
+    <hr class="red">
+  </div>
+</div>
+
 <form role="form" [formGroup]="loginForm" (ngSubmit)="iniciarSesion()">
   <div class="row">
       <div class="col-md-4">
