--- a/src/app/compartido/componentes/encabezado/encabezado.component.html
+++ b/src/app/compartido/componentes/encabezado/encabezado.component.html
@@ -2,7 +2,12 @@
   <div class="col-sm-12">
       <ol class="breadcrumb">
           <li><a href="https://www.gob.mx"><i class="icon icon-home"></i></a></li>
-          <li><a href="#"> Sistema de Identificación de Ganado</a></li>
+          <li>Sistema de Identificación de Ganado</li>
+          @for (breadcrumb of breadcrumbs; track $index) {
+            <li class="active">
+              <span> {{ breadcrumb.label }}</span>
+            </li>
+          }
       </ol>
   </div>
 </div>
@@ -10,13 +15,14 @@
   <div class="col-md-7" id="logotipos">
       <img src="assets/img/logos.png" />
   </div>
-  <div class="col-md-5"></div>
+  @if (autentificacionService.esAutenticado()) {
+    <div class="col-md-5">
+      <div class="usuario">
+          <p>{{nombre}} <a (click)="salir()" class="pull-right pointer">Salir</a></p>
+          <p><strong>Rol:</strong> {{rol}}</p>
+      </div>
+    </div>
+  }
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <h2>Generación de Código en Ventanilla</h2>
-    <h3>Sistema de Identificación de Ganado</h3><h3>Iniciar sesión</h3>
-    <hr class="red">
-  </div>
-</div>
+
